--- a/res/menu/main_activity.xml
+++ b/res/menu/main_activity.xml
@@ -2,9 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_search"
           android:title="@string/menu_search"
+          android:icon="@drawable/ic_menu_zoom"
           android:showAsAction="ifRoom"
           android:actionViewClass="android.widget.SearchView" />
     <item android:id="@+id/menu_sync"
           android:title="@string/menu_sync"
+          android:icon="@drawable/ic_menu_refresh"
           android:showAsAction="ifRoom" />
 </menu>
