MinSdkVersion and stuff

--- a/res/menu/main_activity.xml
+++ b/res/menu/main_activity.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_delete"
-          android:title="@string/menu_delete"
-          android:showAsAction="ifRoom" />
     <item android:id="@+id/menu_search"
           android:title="@string/menu_search"
           android:icon="@drawable/ic_menu_zoom"
@@ -12,7 +9,10 @@
           android:title="@string/menu_sync"
           android:icon="@drawable/ic_menu_refresh"
           android:showAsAction="ifRoom" />
+    <item android:id="@+id/menu_delete"
+          android:title="@string/menu_delete"
+          android:showAsAction="never" />
     <item android:id="@+id/menu_preferences"
           android:title="@string/menu_preferences"
-          android:showAsAction="ifRoom" />
+          android:showAsAction="never" />
 </menu>
