--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,13 +5,13 @@
     android:layout_height="fill_parent"
     >
     <ListView android:id="@android:id/list"
-        android:layout_width="fill_parent" 
-        android:layout_height="wrap_content" 
+        android:layout_width="match_parent" 
+        android:layout_height="match_parent" 
         />
     <TextView android:id="@android:id/empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Empty set"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="(No pages)"
         />
 </LinearLayout>
 
