--- a/res/layout/page.xml
+++ b/res/layout/page.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:id="@+id/page_scroll_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
-    <EditText
+    <EditText 
         android:id="@+id/page_text"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:typeface="monospace"
+        android:textSize="12sp"
         android:gravity="top"
+        android:background="@android:color/transparent"
+        android:scrollbars="vertical"
+        android:fadingEdge="vertical"
         android:inputType="textMultiLine" />
-</LinearLayout>
+</ScrollView>
