Wiki path on sdcard

--- a/res/menu/main_activity.xml
+++ b/res/menu/main_activity.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+<!--
     <item android:id="@+id/menu_search"
           android:title="@string/menu_search"
           android:icon="@drawable/ic_menu_zoom"
           android:showAsAction="ifRoom"
           android:actionViewClass="android.widget.SearchView" />
+          -->
     <item android:id="@+id/menu_sync"
           android:title="@string/menu_sync"
           android:icon="@drawable/ic_menu_refresh"
           android:showAsAction="ifRoom" />
     <item android:id="@+id/menu_delete"
           android:title="@string/menu_delete"
-          android:showAsAction="never" />
+          android:showAsAction="ifRoom" />
     <item android:id="@+id/menu_preferences"
           android:title="@string/menu_preferences"
-          android:showAsAction="never" />
+          android:showAsAction="ifRoom" />
     <item android:id="@+id/menu_new"
           android:title="@string/menu_new"
-          android:showAsAction="never" />
+          android:showAsAction="ifRoom" />
 </menu>
