--- a/res/layout/page.xml
+++ b/res/layout/page.xml
@@ -7,8 +7,8 @@
     >
     <EditText 
         android:id="@+id/page_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:typeface="monospace"
         android:textSize="12sp"
         android:gravity="top"
