--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -15,7 +15,7 @@
     <item android:id="@+id/menu_preferences"
           android:title="@string/menu_preferences"
           android:showAsAction="ifRoom" />
-    <item android:id="@+id/menu_new"
+      <!-- <item android:id="@+id/menu_new"
           android:title="@string/menu_new"
-          android:showAsAction="ifRoom" />
+          android:showAsAction="ifRoom" /> -->
 </menu>
