--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -11,10 +11,10 @@
           android:showAsAction="always" />
     <item android:id="@+id/menu_delete"
           android:title="@string/menu_delete"
-          android:showAsAction="ifRoom" />
-    <item android:id="@+id/menu_preferences"
-          android:title="@string/menu_preferences"
-          android:showAsAction="ifRoom" />
+          android:showAsAction="never" />
+    <item android:id="@+id/menu_settings"
+          android:title="@string/menu_settings"
+          android:showAsAction="never" />
       <!-- <item android:id="@+id/menu_new"
           android:title="@string/menu_new"
           android:showAsAction="ifRoom" /> -->
