Nicer "No pages" message

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,6 +12,8 @@
     <TextView android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="(No pages)"
+        android:text="No pages"
+        android:gravity="center"
+        android:textSize="22sp"
         />
 </LinearLayout>
