--- a/res/layout/page.xml
+++ b/res/layout/page.xml
@@ -11,7 +11,9 @@
         android:layout_height="match_parent"
         android:typeface="monospace"
         android:textSize="12sp"
+        android:background="@android:color/transparent"
         android:gravity="top"
+        android:padding="4sp"
         android:scrollbars="vertical"
         android:inputType="textMultiLine|textNoSuggestions" />
 </ScrollView>
