--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_search"
           android:title="@string/menu_search"
-          android:icon="@drawable/ic_menu_zoom"
           android:showAsAction="always"
           android:actionViewClass="android.widget.SearchView" />
+    <item android:id="@+id/menu_add"
+          android:title="@string/menu_add"
+          android:icon="@drawable/ic_add_white_24dp"
+          android:showAsAction="always" />
     <item android:id="@+id/menu_sync"
           android:title="@string/menu_sync"
-          android:icon="@drawable/ic_menu_refresh"
+          android:icon="@drawable/ic_sync_white_24dp"
           android:showAsAction="always" />
-    <item android:id="@+id/menu_delete"
-          android:title="@string/menu_delete"
-          android:showAsAction="never" />
     <item android:id="@+id/menu_settings"
           android:title="@string/menu_settings"
           android:showAsAction="never" />
